Fixes a few issues with product category management: * The search icon z-index being off and showing above the "Add category" button * Returns a more helpful error message on term_exists (when a category name already exists at a certain parent level) * Blocks the save button if name or a parent/top level input is not selected

--- a/client/extensions/woocommerce/app/product-categories/style.scss
+++ b/client/extensions/woocommerce/app/product-categories/style.scss
@@ -131,7 +131,11 @@
 	flex: 2
 }
 
-
+.product_categories__list-wrapper {
+	.search, .search__open-icon, .search__close-icon {
+		z-index: initial;
+	}
+}
 
 .product-categories__form-image-wrapper {
 	display: flex;
